Tenant pipeline config
